Ticket #29108: Revert: Prevent dropdown from stretching to fill parent height.
This reverts commit 38e9157eb850766046139cf8871c04131c93b5f6.

--- a/com.top_logic.layout.react/src/main/webapp/style/tlReactControls.css
+++ b/com.top_logic.layout.react/src/main/webapp/style/tlReactControls.css
@@ -2455,7 +2455,6 @@ button.tlMenu__item--disabled:hover {
 .tlDropdownSelect {
 	display: flex;
 	align-items: flex-start;
-	height: fit-content;
 	border: 1px solid var(--border-subtle, #e0e0e0);
 	border-radius: var(--border-radius-02, 4px);
 	background-color: var(--field, #fff);
